2008-11-26 [colin]	3.6.1cvs43

	* src/imap.c
	* src/news.c
	* src/etpan/imap-thread.c
		Fix possible crashes due to clist_begin()
		not checking for NULLs (it should!)

2008-11-25 [colin]	3.6.1cvs42

	* src/procmime.c
		Fix line length in MIME parameters

2008-11-22 [paul]	3.6.1cvs41

	* src/compose.c
		grab Return key press in attachments Properties
		dialog

2008-11-21 [colin]	3.6.1cvs40

	* src/compose.c
	* src/procmime.c
		Fix bug 1776, 'use encoded name parameters 
		for attachments instead of ascii'.
		Break the RFC 2047 by using B-encoded 
		filename parameter, like everyone does,
		following advice from the RFC author.

2008-11-21 [colin]	3.6.1cvs39

	* src/common/socket.c
		Rehandshake if server asks to

2008-11-21 [colin]	3.6.1cvs38

	* src/mimeview.h
	* src/toolbar.h
	* src/common/session.h
	* src/common/smtp.h
		Move conditional-compilation members to
		end of structs

2008-11-19 [wwp]	3.6.1cvs37

	* src/prefs_actions.c
		Fixed wrong behaviour when pressing Escape (was not cancelling
		the action).

2008-11-19 [wwp]	3.6.1cvs36

	* src/compose.c
	* src/matcher.c
	* src/messageview.c
	* src/mimeview.c
	* src/prefs_actions.c
	* src/prefs_filtering_action.c
	* src/procmsg.c
	* src/summaryview.c
	* src/textview.c
	* src/common/utils.c
		Replace occurrences of "command line" with "command-line" everywhere.
		Enforce code style (mostly indentation) in prefs_actions.c.

2008-11-19 [colin]	3.6.1cvs35

	* src/compose.c
	* src/prefs_common.c
	* src/prefs_common.h
		Add primary_paste_unselects hidden preference
		to change how middle-click pasting changes
		the selection and insert point; defaults to
		pre-3.6.1cvs31

2008-11-19 [colin]	3.6.1cvs34

	* src/folderview.c
		Always give focus to summaryview, even if
		the folder is empty, in small screen layout.
		Allows to go back to folderlist using the
		keyboard.

2008-11-18 [colin]	3.6.1cvs33

	* src/mainwindow.h
		Put back conditional at the end of struct

2008-11-18 [colin]	3.6.1cvs32

	* src/procmime.c